# SMT_MacroPlacer

./: .dockerignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: c-cpp.yml  main.yml
01_src/: CMakeLists.txt  cmdline_arguments.hpp  header.ascii  main.cpp  object.cpp  object.hpp  placer.cpp  placer.hpp  version.hpp
01_src/clustering/: centroid.cpp  centroid.hpp  cluster.cpp  cluster.hpp  kmeans.cpp  kmeans.hpp
01_src/compontents/: cell.cpp  cell.hpp  component.cpp  component.hpp  components.hpp  macro.cpp  macro.hpp  macro_definition.hpp  partition.cpp  partition.hpp  pin.cpp  pin.hpp  pin_definition.hpp  supplementmacro.cpp  supplementmacro.hpp  supplementpin.cpp  supplementpin.hpp  supplementterminal.cpp  supplementterminal.hpp  terminal.cpp  terminal.hpp  terminal_definition.hpp
01_src/evaluate/: evaluate.cpp  evaluate.hpp
01_src/hl_client/: hl_client.sln
01_src/hl_client/HL_Client/: HL_Client.csproj  Program.cs  SmtPlacer.cs  TCP_Server.cs
01_src/macrocircuit/: bookshelf.cpp  bookshelf.hpp  encoding_utils.hpp  hlclient.cpp  hlclient.hpp  layout.cpp  layout.hpp  lefParser.cpp  macrocircuit.cpp  macrocircuit.hpp  minizinc_utils.hpp  parquet.cpp  parquet.hpp  partitioning.cpp  partitioning.hpp  plotter.cpp  plotter.hpp  smt_placer.pb.cc  smt_placer.pb.h  supplement.cpp  supplement.hpp  supplementlayout.cpp  supplementlayout.hpp
01_src/tree/: edge.cpp  edge.hpp  node.cpp  node.hpp  tree.cpp  tree.hpp  tree.inl
01_src/utils/: base_database.cpp  base_database.hpp  base_logger.cpp  base_logger.hpp  bookshelf_converter.cpp  costfunction.cpp  costfunction.hpp  database.cpp  database.hpp  def_utils.hpp  exception.cpp  exception.hpp  header.ascii  logger.cpp  logger.hpp  tcp_client.cpp  tcp_client.hpp  testbench_tcp_client.cpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp  utils.inl
02_module/: CMakeLists.txt
02_module/ABKCommon/src/: abkassert.cxx  abkassert.h  abkio.cxx  abkio.h  paramproc.cxx  uofm_alloc.h  verbosity.cxx
02_module/ParquetFP/: CMakeLists.txt
02_module/ParquetFP/src/: FPcommon.h  Nodes.cxx  Parquet.cxx  btree.h  btreeanneal.cxx
03_benchmarks/01_wiring/boxes_1/: boxes.def  boxes.lef  config.ini
03_benchmarks/01_wiring/boxes_10/: boxes.def  boxes.lef  config.ini  first.ini  second.ini
03_benchmarks/01_wiring/boxes_2/: boxes.def  first.ini  supplement.json
03_benchmarks/01_wiring/boxes_20/: boxes.def  config.ini  first.ini
03_benchmarks/01_wiring/boxes_3/: boxes.def  boxes.lef  config.ini
03_benchmarks/01_wiring/boxes_30/: boxes.def  config.ini
03_benchmarks/01_wiring/boxes_5/: boxes.def  config.ini
03_benchmarks/01_wiring/boxes_7/: boxes.def  config.ini
03_benchmarks/01_wiring/boxes_8/: boxes.def  boxes.lef  config.ini
03_benchmarks/01_wiring/boxes_9/: boxes.def  boxes.lef
03_benchmarks/01_wiring/diamond/: boxes.def  boxes.lef  config.ini  supplement.json
03_benchmarks/02_MCNC/ami33/: ami33.aux  ami33.nets  ami33.pl  config.ini
03_benchmarks/02_MCNC/ami49/: ami49.aux  ami49.nets  ami49.pl  ami49.pl1  config.ini  supplement.json
03_benchmarks/02_MCNC/apte/: apte.aux  apte.blocks  apte.nets  apte.pl  config.ini
03_benchmarks/02_MCNC/apte/old_format/: apte.nets
03_benchmarks/02_MCNC/hp/: config.ini  first.ini  hp.aux  hp.blocks  hp.nets  hp.pl  second.ini  supplement.json
03_benchmarks/02_MCNC/hp/old_format/: config.ini  hp.nets
03_benchmarks/02_MCNC/xerox/: config.ini  supplement.json  xerox.aux  xerox.blocks  xerox.nets  xerox.pl
03_benchmarks/02_MCNC/xerox/old_format/: xerox.aux  xerox.nets  xerox.pl
03_benchmarks/03_GSRC/n10/: config.ini  first.ini  n10.aux  n10.blocks  n10.nets  n10.pl
03_benchmarks/03_GSRC/n100/: config.ini  n100.aux  n100.blocks  n100.pl
03_benchmarks/03_GSRC/n200/: config.ini  n200.aux  n200.blocks  n200.pl
03_benchmarks/03_GSRC/n30/: config.ini  n30.aux  n30.blocks  n30.nets  n30.pl
03_benchmarks/03_GSRC/n300/: config.ini  n300.aux  n300.blocks  n300.pl
03_benchmarks/03_GSRC/n50/: config.ini  n50.aux  n50.blocks  n50.nets  n50.pl  partition.txt
03_benchmarks/04_boohshelf_basic/boxes_4/: boxes4.aux  boxes4.blocks  boxes4.nets  boxes4.pl  config.ini
03_benchmarks/04_boohshelf_basic/boxes_4/old_format/: boxes4.nets
03_benchmarks/04_boohshelf_basic/boxes_6/: boxes6.aux  boxes6.blocks  boxes6.nets  boxes6.pl  config.ini
03_benchmarks/04_boohshelf_basic/boxes_8/: boxes8.aux  boxes8.blocks  boxes8.pl  config.ini
04_configuration/: CMakeLists.txt  Doxyfile.in  bash_completion_script.sh  db_to_csv.sh  extract_version.py  install_placer.sh  placer.proto  smt_placer.proto
05_third_party/: CMakeLists.txt
05_third_party/01_kahypar/: CMakeLists.txt
05_third_party/01_z3/: CMakeLists.txt  install_z3.sh
05_third_party/02_jsoncpp/: CMakeLists.txt  install_jsoncpp.sh
05_third_party/02_z3/: CMakeLists.txt  install_z3.sh
05_third_party/03_jsoncpp/: CMakeLists.txt
05_third_party/03_sqlite3/: CMakeLists.txt  install_sqlite3.sh
05_third_party/04_boost/: CMakeLists.txt  install_boost.sh
05_third_party/04_kahypar/: CMakeLists.txt  install_kahypar.sh
05_third_party/05_matplotlib/: CMakeLists.txt  install_matplotlib.sh
05_third_party/05_sqlite3/: CMakeLists.txt  install_sqlite3.sh
05_third_party/06_minizinc/: CMakeLists.txt  install_minizinc.sh
05_third_party/06_optimathsat/: CMakeLists.txt  install_optimathsat.sh
